--- a/pokeapi/src/App.css
+++ b/pokeapi/src/App.css
@@ -5,3 +5,15 @@
   margin:0;
   padding:0
 }
+
+.app{
+  display: grid;
+  grid-template-rows:auto 1fr;
+  min-height: 100vh;
+}
+
+.app main{  
+  padding: 10px;
+  height: 100%;
+  overflow: auto;
+}
